# ComfyUI-SAM3DObjects

./: .gitignore  =0.2.6  COMPILER_DETECTION.md  HISTORY.md  INSTALLATION_FIXES.md  INSTALL_GUIDE.md  MICROMAMBA_MIGRATION.md  NODE_DESIGN_RECOMMENDATIONS.md  README.md  __init__.py  convert_nodes.py  environment.yml  inference_worker.py  install.py  prestartup_script.py  pyproject.toml  requirements.txt  test_isolated_env.py  test_model_load.py  test_vendor_import.py
assets/: README.md
local_env/: __init__.py  config.py  manager.py  utils.py
local_env/installers/: __init__.py  base.py  cuda.py  micromamba.py  pytorch.py  pytorch_pip.py  specialized.py  venv.py
local_env/platform/: __init__.py  base.py  darwin.py  linux.py  windows.py
local_env_settings/: README.md  requirements_env.txt
mamba_env/: README.md  environment.yml  requirements_env.txt
nodes/: depth_estimate.py  env_manager.py  export_mesh.py.bak  export_ply.py  gaussian_decode.py  generate.py  generate_stage1.py  generate_stage2.py  isolated_model.py  load_model.py  mesh_decode.py  pose_optimization.py  postprocess.py  preview_nodes.py  sam3d_inference.py  subprocess_bridge.py  unload_model.py  utils.py  visualizer.py
web/: viewer_vtk.html
web/js/: pointcloud_preview_vtk.js
workflows/: README.md  full_generation.json  gaussian-generation.json  gaussian_generation.json  mesh_generation.json  object_generation.json  object_generation_modular.json  texture_baking.json
