[project]
name = "comfyui-sam3dobjects"
description = "ComfyUI wrapper for SAM3DObjects: extract 3D meshes/gaussians from pictures. This node is a very first draft, putting it out there in the hope people help me with the development. I hate shipping broken code but I have some hope at least some linux people will manage to use it."
version = "0.0.4"
license = {file = "LICENSE"}
requires-python = ">=3.10"

dependencies = [
    # ─── Core config / utils ───────────────────────────
    "hydra-core>=1.3.2",
    "einops-exts>=0.0.4",
    "roma>=1.5.1",
    "easydict>=1.13",
    "loguru>=0.7.2",
    "addict",
    "omegaconf",

    # ─── 3D mesh + geometry utils (pip-safe only) ──────
    "trimesh",
    "open3d>=0.18.0",
    "point-cloud-utils>=0.29.5",
    "xatlas>=0.0.9",
    "pyvista>=0.43.0",
    "pymeshfix>=0.16.0",

    # ─── Image / processing ────────────────────────────
    "opencv-python>=4.9.0",
    "scikit-image>=0.23.1",
    "imageio>=2.36.0",

    # ─── ML model libs (pure-Python) ───────────────────
    "timm>=0.9.16",
    "transformers",
    "diffusers",
    "huggingface-hub",
    "gdown>=5.2.0",

    # ─── Python / math deps ────────────────────────────
    "astor>=0.8.0",
    "optree>=0.11.0",
    "scipy>=1.11.0",
    "numpy>=1.24.0,<2.0",
    "python-igraph>=1.0.0",

    # ─── Utilities ─────────────────────────────────────
    "tqdm>=4.67.0",

    # ─── Visualization (pure Python) ───────────────────
    "seaborn>=0.13.0",
    "matplotlib>=3.9.0",
    "plotly>=5.24.0",
    "gradio>=4.44.0",

    # ─── Lightning (pip-safe) ──────────────────────────
    "lightning>=2.0.0",
]

[project.urls]
Repository = "https://github.com/PozzettiAndrea/ComfyUI-SAM3DObjects"
Documentation = "https://github.com/PozzettiAndrea/ComfyUI-SAM3DObjects#readme"
"Bug Tracker" = "https://github.com/PozzettiAndrea/ComfyUI-SAM3DObjects/issues"

# ComfyUI Registry configuration
[tool.comfy]
PublisherId = "pznodes"
DisplayName = "SAM3DObjects"
Icon = ""
